--- a/assignment_5/productDetail.html
+++ b/assignment_5/productDetail.html
@@ -14,7 +14,7 @@
 </head>
 <header>
   <div class="nav">
-    <a href="main.html" class="title">Muddy Paws</a>
+    <a href="index.html" class="title">Muddy Paws</a>
     <div class="navLeft">
       <span class="dogHead headLink">Dogs</span>
       <span class="catHead headLink">Cats</span>
