--- a/assignment_5/dogProduct.html
+++ b/assignment_5/dogProduct.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Head details and font pulls-->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,8 +11,9 @@
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" />
   <link href="./dogStyle.css" rel="stylesheet" />
 </head>
-
+<!-- Page Content -->
 <body>
+  <!-- Nav bar and header -->
   <div class="nav">
     <a href="index.html" class="title">Muddy Paws</a>
     <div class="navLeft">
@@ -25,13 +26,17 @@
       <a class="profIcon" href="#profile"><img src="images/bi_person.png" alt="Search"></a>
     </div>
   </div>
-
+<!-- Main page content -->
   <main>
+    <!-- Creating workspace for products -->
     <div class="content">
+      <!-- Product containers 
+          Harness container -->
       <div class="product harness">
         <a href="productDetail.html"><img class="active" src="images/tanHarness.png" alt="Tan Harness"></a>
         <h1>Dog Harness</h1>
         <p>Soft-stretch body with 3 leash points</p>
+        <!-- Color Selection -->
         <div class="productColor">
           <div class="colorChoose">
             <div>
@@ -51,16 +56,20 @@
               <label><span></span></label>
             </div>
           </div>
+          <!-- Clickable product detail button -->
           <div class="shopButton">
             <a href="productDetail.html" class="prodBtn">Shop Now - $48</a>
           </div>
         </div>
       </div>
+      <!-- Vertical line break -->
       <hr class="solid leftBreak">
+      <!-- Leash container -->
       <div class="product leash">
         <img class="active" src="images/leash.png" alt="Tan Harness">
         <h1>Leash</h1>
         <p>Weatherproof, durable, & adjustable length</p>
+        <!-- Color Selection -->
         <div class="productColor">
           <div class="colorChoose">
             <div>
@@ -80,16 +89,20 @@
               <label><span></span></label>
             </div>
           </div>
+          <!-- Unclickable product button -->
           <div class="shopButton">
             <a href="#" class="prodBtn">Shop Now - $58</a>
           </div>
         </div>
       </div>
+      <!-- Vertical line break -->
       <hr class="solid midBreak">
+      <!-- Collar container -->
       <div class="product collar">
         <img class="active" src="images/collar.png" alt="Purple Collar">
         <h1>Dog Collar</h1>
         <p>Dirt, odor, and weather resistant</p>
+        <!-- Color Selection -->
         <div class="productColor">
           <div class="colorChoose">
             <div>
@@ -109,16 +122,20 @@
               <label><span></span></label>
             </div>
           </div>
+          <!-- Unclickable product button -->
           <div class="shopButton">
             <a href="#" class="prodBtn">Shop Now - $38</a>
           </div>
         </div>
       </div>
+      <!-- Vertical line break -->
       <hr class="solid rightBreak">
+      <!-- Poo bag holder container -->
       <div class="product bagHolder">
         <img class="active" src="images/bagHolder.png" alt="Blue Poo Bag Holder">
         <h1>Poo Bag Holder</h1>
         <p>Soft touch body & easy elastic link loop</p>
+        <!-- Color Selection -->
         <div class="productColor">
           <div class="colorChoose">
             <div>
@@ -138,6 +155,7 @@
               <label><span></span></label>
             </div>
           </div>
+          <!-- Unclickable product button -->
           <div class="shopButton">
             <a href="#" class="prodBtn">Shop Now - $12</a>
           </div>
