--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Head details and font pulls-->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" />
   <link href="./main-style.css" rel="stylesheet" />
 </head>
-
+  <!-- Header and Nav -->
 <body>
   <div class="nav">
     <span class="title">Muddy Paws</span>
@@ -25,10 +25,12 @@
       <a class="profIcon" href="#profile"><img src="images/bi_person.png" alt="Search"></a>
     </div>
   </div>
+  <!-- Page Content -->
   <main>
+    <!-- Hero Texts -->
     <span class="heroText">Hiking Gear for our furry friends!</span>
     <span class="subText">What type of pet are you buying for today?</span>
-
+    <!-- Clickable categories -->
     <div class="catClick">
       <span class="catsBig">Cats</span>
       <div class="catImg">
