--- a/assignment_5/productDetail.html
+++ b/assignment_5/productDetail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Head details and font pulls-->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,19 +29,20 @@
 <!-- Two columns seems easy, with details on the right and images on the left. 
       Going to add the small supporting images later. -->
 <main class="container">
+  <!-- Large hero image column -->
   <div class="leftColumn">
     <img class="active" src="images/tan.png" alt="Tan Harness">
     <img src="images/blue.png" alt="Navy Harness">
   </div>
-  <!-- Image column -->
+  <!-- Content column -->
   <div class="rightColumn">
 
     <div class="productTitle">
       <h1>Dog Harness</h1>
     </div>
-
+    <!-- Clickables -->
     <div class="productConfiguration">
-
+      <!-- Color buttons -->
       <div class="productColor">
         <span>Color</span>
 
@@ -64,7 +65,7 @@
           </div>
         </div>
       </div>
-
+      <!-- Size buttons -->
       <div class="sizeConfig">
         <span>Size</span>
 
@@ -77,19 +78,20 @@
 
         <a href="#">Sizing Guide</a>
       </div>
-
+      <!-- Quantity buttons -->
       <div class="productCount">
         <button>-</button>
         <h1>1</h1>
         <button>+</button>
       </div>
-
+      <!-- Product description -->
       <div class="productDescription">
         <p>Soft, stretchy, and resilient. A cushioned, lightweight harness that’s simple to secure and easy to link up
           with. An adjustable neck and chest for all shapes and sizes. Three leash attachment points because we all lead
           in different ways. Probably the smartest harness. </p>
       </div>
     </div>
+    <!-- Price and Add to Cart button -->
     <div class="productPrice">
       <span>$48</span>
       <a href="#" class="cartBtn">Add to cart</a>
