Fixed image links
Relative file path rather than absolute!

--- a/assignment_5/dogProduct.html
+++ b/assignment_5/dogProduct.html
@@ -21,9 +21,9 @@
       <span class="catHead headLink">Cats</span>
     </div>
     <div class="iconSet">
-      <a class="searchIcon" href="#search"><img src="images/clarity_search-line.png" alt="Search"></a>
-      <a class="basketIcon" href="#basket"><img src="images/la_shopping-bag-solid.png" alt="Search"></a>
-      <a class="profIcon" href="#profile"><img src="images/bi_person.png" alt="Search"></a>
+      <a class="searchIcon" href="#search"><img src="./images/clarity_search-line.png" alt="Search"></a>
+      <a class="basketIcon" href="#basket"><img src="./images/la_shopping-bag-solid.png" alt="Search"></a>
+      <a class="profIcon" href="#profile"><img src="./images/bi_person.png" alt="Search"></a>
     </div>
   </div>
 <!-- Main page content -->
@@ -33,7 +33,7 @@
       <!-- Product containers 
           Harness container -->
       <div class="product harness">
-        <a href="productDetail.html"><img class="active" src="images/tanHarness.png" alt="Tan Harness"></a>
+        <a href="productDetail.html"><img class="active" src="./images/tanHarness.png" alt="Tan Harness"></a>
         <h1>Dog Harness</h1>
         <p>Soft-stretch body with 3 leash points</p>
         <!-- Color Selection -->
@@ -66,7 +66,7 @@
       <hr class="solid leftBreak">
       <!-- Leash container -->
       <div class="product leash">
-        <img class="active" src="images/leash.png" alt="Tan Harness">
+        <img class="active" src="./images/leash.png" alt="Tan Harness">
         <h1>Leash</h1>
         <p>Weatherproof, durable, & adjustable length</p>
         <!-- Color Selection -->
@@ -99,7 +99,7 @@
       <hr class="solid midBreak">
       <!-- Collar container -->
       <div class="product collar">
-        <img class="active" src="images/collar.png" alt="Purple Collar">
+        <img class="active" src="./images/collar.png" alt="Purple Collar">
         <h1>Dog Collar</h1>
         <p>Dirt, odor, and weather resistant</p>
         <!-- Color Selection -->
@@ -132,7 +132,7 @@
       <hr class="solid rightBreak">
       <!-- Poo bag holder container -->
       <div class="product bagHolder">
-        <img class="active" src="images/bagHolder.png" alt="Blue Poo Bag Holder">
+        <img class="active" src="./images/bagHolder.png" alt="Blue Poo Bag Holder">
         <h1>Poo Bag Holder</h1>
         <p>Soft touch body & easy elastic link loop</p>
         <!-- Color Selection -->
