--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -20,9 +20,9 @@
       <span class="catHead headLink">Cats</span>
     </div>
     <div class="iconSet">
-      <a class="searchIcon" href="#search"><img src="images/clarity_search-line.png" alt="Search"></a>
-      <a class="basketIcon" href="#basket"><img src="images/la_shopping-bag-solid.png" alt="Search"></a>
-      <a class="profIcon" href="#profile"><img src="images/bi_person.png" alt="Search"></a>
+      <a class="searchIcon" href="#search"><img src="./images/clarity_search-line.png" alt="Search"></a>
+      <a class="basketIcon" href="#basket"><img src="./images/la_shopping-bag-solid.png" alt="Search"></a>
+      <a class="profIcon" href="#profile"><img src="./images/bi_person.png" alt="Search"></a>
     </div>
   </div>
   <!-- Page Content -->
@@ -34,13 +34,13 @@
     <div class="catClick">
       <span class="catsBig">Cats</span>
       <div class="catImg">
-        <img src="images/catWalking.png" alt="Cat Walking" width="500" height="500">
+        <img src="./images/catWalking.png" alt="Cat Walking" width="500" height="500">
       </div>
     </div>
     <a href="dogProduct.html" class="dogClick">
       <span class="dogsBig">Dogs</span>
       <div class="dogImg">
-        <img src="images/dogWalking.png" alt="Dog Walking">
+        <img src="./images/dogWalking.png" alt="Dog Walking">
       </div>
     </a>
   </main>
