--- a/assignment_5/productDetail.html
+++ b/assignment_5/productDetail.html
@@ -20,9 +20,9 @@
       <span class="catHead headLink">Cats</span>
     </div>
     <div class="iconSet">
-      <a class="searchIcon" href="#search"><img src="images/clarity_search-line.png" alt="Search"></a>
-      <a class="basketIcon" href="#basket"><img src="images/la_shopping-bag-solid.png" alt="Search"></a>
-      <a class="profIcon" href="#profile"><img src="images/bi_person.png" alt="Search"></a>
+      <a class="searchIcon" href="#search"><img src="./images/clarity_search-line.png" alt="Search"></a>
+      <a class="basketIcon" href="#basket"><img src="./images/la_shopping-bag-solid.png" alt="Search"></a>
+      <a class="profIcon" href="#profile"><img src="./images/bi_person.png" alt="Search"></a>
     </div>
   </div>
 </header>
@@ -31,8 +31,8 @@
 <main class="container">
   <!-- Large hero image column -->
   <div class="leftColumn">
-    <img class="active" src="images/tan.png" alt="Tan Harness">
-    <img src="images/blue.png" alt="Navy Harness">
+    <img class="active" src="./images/tan.png" alt="Tan Harness">
+    <img src="./images/blue.png" alt="Navy Harness">
   </div>
   <!-- Content column -->
   <div class="rightColumn">
