Alt Text Updates
Noticed some broken Alt Text for the nav images.

--- a/assignment_5/dogProduct.html
+++ b/assignment_5/dogProduct.html
@@ -22,8 +22,8 @@
     </div>
     <div class="iconSet">
       <a class="searchIcon" href="#search"><img src="./images/clarity_search-line.png" alt="Search"></a>
-      <a class="basketIcon" href="#basket"><img src="./images/la_shopping-bag-solid.png" alt="Search"></a>
-      <a class="profIcon" href="#profile"><img src="./images/bi_person.png" alt="Search"></a>
+      <a class="basketIcon" href="#basket"><img src="./images/la_shopping-bag-solid.png" alt="Cart"></a>
+      <a class="profIcon" href="#profile"><img src="./images/bi_person.png" alt="Profile"></a>
     </div>
   </div>
 <!-- Main page content -->
