--- a/assignment_6/dogProduct.html
+++ b/assignment_6/dogProduct.html
@@ -13,18 +13,23 @@
 </head>
 
 <body>
-  <div class="nav">
-    <a href="main.html" class="title">Muddy Paws</a>
-    <div class="navLeft">
-      <span class="dogHead headLink">Dogs</span>
-      <span class="catHead headLink">Cats</span>
+  <!-- Header and Nav -->
+  <header>
+    <div class="nav">
+      <a href="index.html" class="title">Muddy Paws</a>
+      <div class="navLeft">
+        <span class="dogHead headLink">Dogs</span>
+        <span class="catHead headLink">Cats</span>
+      </div>
+      <div class="iconSet">
+        <a class="searchIcon" href="#search"><img src="images/clarity_search-line.png" alt="Search"></a>
+        <a class="basketIcon" id="basketTest" href="#basket"><img src="images/la_shopping-bag-solid.png"
+            alt="Search"></a>
+        <input type="text" class="quant" id="basketNum" value="1" onload="numSet()" readonly />
+        <a class="profIcon" href="#profile"><img src="images/bi_person.png" alt="Search"></a>
+      </div>
     </div>
-    <div class="iconSet">
-      <a class="searchIcon" href="#search"><img src="images/clarity_search-line.png" alt="Search"></a>
-      <a class="basketIcon" href="#basket"><img src="images/la_shopping-bag-solid.png" alt="Search"></a>
-      <a class="profIcon" href="#profile"><img src="images/bi_person.png" alt="Search"></a>
-    </div>
-  </div>
+  </header>
 
   <main>
     <div class="content">
@@ -147,5 +152,6 @@
 
   </main>
 </body>
+<script src="cartNum.js"></script>
 
 </html>
