Image refs fixed

--- a/assignment_6/dogProduct.html
+++ b/assignment_6/dogProduct.html
@@ -22,11 +22,11 @@
         <span class="catHead headLink">Cats</span>
       </div>
       <div class="iconSet">
-        <a class="searchIcon" href="#search"><img src="images/clarity_search-line.png" alt="Search"></a>
-        <a class="basketIcon" id="basketTest" href="#basket"><img src="images/la_shopping-bag-solid.png"
+        <a class="searchIcon" href="#search"><img src="./Images/clarity_search-line.png" alt="Search"></a>
+        <a class="basketIcon" id="basketTest" href="#basket"><img src="./Images/la_shopping-bag-solid.png"
             alt="Search"></a>
         <input type="text" class="quant" id="basketNum" value="1" onload="numSet()" readonly />
-        <a class="profIcon" href="#profile"><img src="images/bi_person.png" alt="Search"></a>
+        <a class="profIcon" href="#profile"><img src="./Images/bi_person.png" alt="Search"></a>
       </div>
     </div>
   </header>
@@ -34,7 +34,7 @@
   <main>
     <div class="content">
       <div class="product harness">
-        <a href="productDetail.html"><img class="active" src="images/tanHarness.png" alt="Tan Harness"></a>
+        <a href="productDetail.html"><img class="active" src="./Images/tanHarness.png" alt="Tan Harness"></a>
         <h1>Dog Harness</h1>
         <p>Soft-stretch body with 3 leash points</p>
         <div class="productColor">
@@ -63,7 +63,7 @@
       </div>
       <hr class="solid leftBreak">
       <div class="product leash">
-        <img class="active" src="images/leash.png" alt="Tan Harness">
+        <img class="active" src="./Images/leash.png" alt="Tan Harness">
         <h1>Leash</h1>
         <p>Weatherproof, durable, & adjustable length</p>
         <div class="productColor">
@@ -92,7 +92,7 @@
       </div>
       <hr class="solid midBreak">
       <div class="product collar">
-        <img class="active" src="images/collar.png" alt="Purple Collar">
+        <img class="active" src="./Images/collar.png" alt="Purple Collar">
         <h1>Dog Collar</h1>
         <p>Dirt, odor, and weather resistant</p>
         <div class="productColor">
@@ -121,7 +121,7 @@
       </div>
       <hr class="solid rightBreak">
       <div class="product bagHolder">
-        <img class="active" src="images/bagHolder.png" alt="Blue Poo Bag Holder">
+        <img class="active" src="./Images/bagHolder.png" alt="Blue Poo Bag Holder">
         <h1>Poo Bag Holder</h1>
         <p>Soft touch body & easy elastic link loop</p>
         <div class="productColor">
