--- a/assignment_6/productDetail.html
+++ b/assignment_6/productDetail.html
@@ -22,10 +22,10 @@
         <span class="catHead headLink">Cats</span>
       </div>
       <div class="iconSet">
-        <a class="searchIcon" href="#search"><img src="images/clarity_search-line.png" alt="Search"></a>
-        <a class="basketIcon" id="basketTest" href="shopCart.html"><img src="images/la_shopping-bag-solid.png" alt="Search"></a>
+        <a class="searchIcon" href="#search"><img src="./Images/clarity_search-line.png" alt="Search"></a>
+        <a class="basketIcon" id="basketTest" href="shopCart.html"><img src="./Images/la_shopping-bag-solid.png" alt="Search"></a>
         <input type="text" class="quant" id="basketNum" value="0" onload="numSet()" readonly />
-        <a class="profIcon" href="#profile"><img src="images/bi_person.png" alt="Search"></a>
+        <a class="profIcon" href="#profile"><img src="./Images/bi_person.png" alt="Search"></a>
       </div>
     </div>
   </header>
