More image references

--- a/assignment_6/index.html
+++ b/assignment_6/index.html
@@ -36,13 +36,13 @@
     <div class="catClick">
       <span class="catsBig">Cats</span>
       <div class="catImg">
-        <img src="images/catWalking.png" alt="Cat Walking" width="500" height="500">
+        <img src="./Images/catWalking.png" alt="Cat Walking" width="500" height="500">
       </div>
     </div>
     <a href="dogProduct.html" class="dogClick">
       <span class="dogsBig">Dogs</span>
       <div class="dogImg">
-        <img src="images/dogWalking.png" alt="Dog Walking">
+        <img src="./Images/dogWalking.png" alt="Dog Walking">
       </div>
     </a>
   </main>
