--- a/assignment_6/productDetail.html
+++ b/assignment_6/productDetail.html
@@ -18,7 +18,7 @@
     <div class="nav" onload="numSet()">
       <a href="index.html" class="title">Muddy Paws</a>
       <div class="navLeft">
-        <span class="dogHead headLink" href="dogProduct.html">Dogs</span>
+        <a class="dogHead headLink" href="dogProduct.html">Dogs</a>
         <span class="catHead headLink">Cats</span>
       </div>
       <div class="iconSet">
