--- a/assignment_6/shopCart.html
+++ b/assignment_6/shopCart.html
@@ -1,7 +1,3 @@
-<!----------------------------
-Name: Judy Chun
-cart.html is the shopping bag page 
------------------------------>
 <html>
 <head>
 	<!-- Linking to the CSS stylesheet -->
@@ -14,55 +10,71 @@ cart.html is the shopping bag page
 </head>
 
 <body>
-    <header>
-        <div class="nav">
-          <a href="main.html" class="title">Muddy Paws</a>
-          <div class="navLeft">
-            <span class="dogHead headLink">Dogs</span>
-            <span class="catHead headLink">Cats</span>
-          </div>
-          <div class="iconSet">
-            <a class="searchIcon" href="#search"><img src="images/clarity_search-line.png" alt="Search"></a>
-            <a class="basketIcon" id="basketTest" href="#basket"><img src="images/la_shopping-bag-solid.png"
-                alt="Search"></a>
-            <a class="profIcon" href="#profile"><img src="images/bi_person.png" alt="Search"></a>
-          </div>
-        </div>
-      </header>
-
-	<br>
+   
 
 	<!-- Putting headers -->
-	<div class = "timeline">
-		<h2>Shopping Bag (2)</h2>
-	</div>
-
-	<!-- Placing the labelings for cart item and price -->
-	<div class="cart-header">
-		<p class="split-header">Item<span>Price</span></p>
-		<hr>
-
-	</div>
-
-	<!-- Creating content for cart -->
-	<div class="cart-body">
-		<!--<div id="placeholder"></div>-->
-	</div>
-	<br>
-	<hr>
-	<br>
-	<div class="cart-total">
-		<p class="cart-total-split cart-total-description">Subtotal<span id="subtotal">$90.00</span></p>
+	<div class = "content">
+		<header>
+			<div class="nav">
+			  <a href="index.html" class="title">Muddy Paws</a>
+			  <div class="navLeft">
+				<span class="dogHead headLink">Dogs</span>
+				<span class="catHead headLink">Cats</span>
+			  </div>
+			  <div class="iconSet">
+				<a class="searchIcon" href="#search"><img src="./Images/clarity_search-line.png" alt="Search"></a>
+				<a class="basketIcon" id="basketTest" href="#basket"><img src="./Images/la_shopping-bag-solid.png"
+					alt="Search"></a>
+				<a class="profIcon" href="#profile"><img src="./Images/bi_person.png" alt="Search"></a>
+			  </div>
+			</div>
+		  </header>
+	
 		<br>
-		<p class="cart-total-split cart-total-description">Shipping<span id="shipping">Free</span></p>
+		<div class = "timeline">
+			<div class = "timelineTop">
+				<span class = "filledDot"></span>
+				<hr class = "timelineLine">
+				<span class = "unfilledDot"></span>
+				<hr class = "timelineLine">
+				<span class = "unfilledDot"></span>
+			</div>
+			<br>
+			<div class = "timelineBottom">
+				<span class = "timeLabelCurrent">Basket</span>
+				<span class = "timeLabel">Shipping</span>
+				<span class = "timeLabel">Checkout</span>
+			</div>
+		</div>
+		
+		<h2 class = "shopCartTitle">Basket: 2 Items</h2>
+		<hr class="solidBreak">
+		<!-- Placing the labelings for cart item and price -->
+		<div class="cart-header">
+			<span class = "cartSub">Item</span>
+			<span class = "cartSub">Price</span>
+			<hr>
+	
+		</div>
+	
+		<!-- Creating content for cart -->
+		<div class="cart-body">
+		</div>
 		<br>
-		<p class="cart-total-split cart-total-description">Estimated tax (PA 6%)<span id="tax">$0.00</span></p>
 		<hr>
-		<p class="cart-total-split cart-total-description">Estimated total<span id="total">$90.00</span></p>
-		<a href="#checkout"><button class="cart-button">Checkout</button></a>
+		<br>
+		<div class="cart-total">
+			<p class="cart-total-split cart-total-description">Subtotal<span id="subtotal">$90.00</span></p>
+			<br>
+			<p class="cart-total-split cart-total-description">Shipping<span id="shipping">Free</span></p>
+			<br>
+			<p class="cart-total-split cart-total-description">Estimated tax (PA 6%)<span id="tax">$0.00</span></p>
+			<hr>
+			<p class="cart-total-split cart-total-description">Estimated total<span id="total">$90.00</span></p>
+			<a href="#checkout"><button class="cart-button">Checkout</button></a>
+		</div>
 	</div>
-
-
+	
 
 </body>
 </html>
