Cart Page Placeholder for 6A

--- a/assignment_6/dogProduct.html
+++ b/assignment_6/dogProduct.html
@@ -23,10 +23,10 @@
       </div>
       <div class="iconSet">
         <a class="searchIcon" href="#search"><img src="./Images/clarity_search-line.png" alt="Search"></a>
-        <a class="basketIcon" id="basketTest" href="#basket"><img src="./Images/la_shopping-bag-solid.png"
-            alt="Search"></a>
-        <input type="text" class="quant" id="basketNum" value="1" onload="numSet()" readonly />
-        <a class="profIcon" href="#profile"><img src="./Images/bi_person.png" alt="Search"></a>
+        <a class="basketIcon" id="basketTest" href="shopCart.html"><img src="./Images/la_shopping-bag-solid.png" alt="Basket"></a>
+        <input type="text" class="quant" id="basketNum" value="0" onload="numSet()" readonly />
+        <a class="profIcon" href="#profile"><img src="./Images/bi_person.png" alt="Profile"></a>
+      </div>
       </div>
     </div>
   </header>
