--- a/assignment_6/shopCart.html
+++ b/assignment_6/shopCart.html
@@ -24,8 +24,8 @@
 			  <div class="iconSet">
 				<a class="searchIcon" href="#search"><img src="./Images/clarity_search-line.png" alt="Search"></a>
 				<a class="basketIcon" id="basketTest" href="#basket"><img src="./Images/la_shopping-bag-solid.png"
-					alt="Search"></a>
-				<a class="profIcon" href="#profile"><img src="./Images/bi_person.png" alt="Search"></a>
+					alt="Basket"></a>
+				<a class="profIcon" href="#profile"><img src="./Images/bi_person.png" alt="Profile"></a>
 			  </div>
 			</div>
 		  </header>
@@ -47,7 +47,7 @@
 			</div>
 		</div>
 		
-		<h2 class = "shopCartTitle">Basket: 2 Items</h2>
+		<h2 class = "shopCartTitle">Basket:     2 Items</h2>
 		<hr class="solidBreak">
 		<!-- Placing the labelings for cart item and price -->
 		<div class="cart-header">
@@ -56,22 +56,36 @@
 			<hr>
 	
 		</div>
-	
+	<div class = ""></div>
 		<!-- Creating content for cart -->
 		<div class="cart-body">
 		</div>
 		<br>
+		<div class = "itemCont">
+			<div class = "itemImg">
+				<img id="tanImg" src="./Images/cartImg1.png" alt="Tan Harness">
+			</div>
+			<div class = "itemDetails">
+				<h2>Dog Harness</h2>
+				<h5>Size: Medium</h5>
+				<h5>Color: Blueberry</h5>
+			</div>
+			<div class = "itemPrice">
+				<h4>2 x $48</h4>
+				<h4 class = "removal">Remove</h4>
+			</div>
+		</div>
 		<hr>
-		<br>
+		<hr class="solidBreak">
 		<div class="cart-total">
-			<p class="cart-total-split cart-total-description">Subtotal<span id="subtotal">$90.00</span></p>
+			<p class="cart-total-split cart-total-description">Subtotal<span id="subtotal">$96.00</span></p>
 			<br>
 			<p class="cart-total-split cart-total-description">Shipping<span id="shipping">Free</span></p>
 			<br>
 			<p class="cart-total-split cart-total-description">Estimated tax (PA 6%)<span id="tax">$0.00</span></p>
 			<hr>
-			<p class="cart-total-split cart-total-description">Estimated total<span id="total">$90.00</span></p>
-			<a href="#checkout"><button class="cart-button">Checkout</button></a>
+			<p class="cart-total-split cart-total-description">Estimated total<span id="total">$96.00</span></p>
+			<a href="#checkout"><button class="prodBtn">Move to Shipping</button></a>
 		</div>
 	</div>
 	
