--- a/assignment_6/productDetail.html
+++ b/assignment_6/productDetail.html
@@ -100,7 +100,7 @@
       </div>
       <div class="productPrice">
         <span>$48</span>
-        <a href="#" class="cartBtn" onclick="objPush()">Add to cart</a>
+        <a class="cartBtn" href="shopCart.html" onclick="objPush()">Add to cart</a>
       </div>
     </div>
   </main>
