--- a/assignment_6/productDetail.html
+++ b/assignment_6/productDetail.html
@@ -54,19 +54,19 @@
 
           <div class="colorChoose">
             <div>
-              <input type="radio" onclick="setColorT()" id="tan" name="color" value="tan" checked="">
+              <input type="radio" onclick="setColorT()" id="tan" name="color" value="Tan" checked="">
               <label for="tan"><span></span></label>
             </div>
             <div>
-              <input type="radio" onclick="setColorS()" id="strawberry" name="color" value="strawberry">
+              <input type="radio" onclick="setColorS()" id="strawberry" name="color" value="Strawberry">
               <label for="strawberry"><span></span></label>
             </div>
             <div>
-              <input type="radio" onclick="setColorP()" id="plum" name="color" value="plum">
+              <input type="radio" onclick="setColorP()" id="plum" name="color" value="Plum">
               <label for="plum"><span></span></label>
             </div>
             <div>
-              <input type="radio" onclick="setColorN()" id="navy" name="color" value="navy">
+              <input type="radio" onclick="setColorN()" id="navy" name="color" value="Navy">
               <label for="navy"><span></span></label>
             </div>
           </div>
