--- a/assignment_6/productDetail.html
+++ b/assignment_6/productDetail.html
@@ -100,7 +100,9 @@
       </div>
       <div class="productPrice">
         <span>$48</span>
-        <a class="cartBtn" href="shopCart.html" onclick="objPush()">Add to cart</a>
+        <a class="cartBtn" onclick="objPush()">Add Item</a>
+        <hr>
+        <a class="cartBtn" href="shopCart.html">Checkout</a>
       </div>
     </div>
   </main>
